# multi-agent-collaboration

./: .env.example  .gitignore  PROJECT_PHASES.md  PROJECT_STRUCTURE.md  README.md  SPEC.md  langgraph.json  pyproject.toml  需求文档.md
.claude/: settings.local.json
src/mase/: __init__.py  cli.py  graph.py  llm.py  models.py  service.py  storage.py
src/mase/api/: __init__.py  app.py
tests/: test_story_service.py
