[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-collaborative-narrative-engine"
version = "0.1.0"
description = "A LangGraph-based multi-agent collaborative storytelling engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "langchain-core>=0.2",
  "langgraph>=0.2",
  "openai>=1.0",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.29"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
